--- a/teoricas/teorica_06/src/localization.tex
+++ b/teoricas/teorica_06/src/localization.tex
@@ -3,7 +3,7 @@
     
     \begin{itemize}
         \item Bayes filter
-        \item kalman filter
+        \item Kalman filter
         \item Particle filter
     \end{itemize}
     
