--- a/teoricas/teorica_06/src/particle_filter.tex
+++ b/teoricas/teorica_06/src/particle_filter.tex
@@ -59,7 +59,7 @@
         \item \textbf{Múltiples muestras con peso} para representar una distribución de probabilidad arbitraría
         \item Es posible reducir el número de muestras que necesitamos, si le agregamos pesos a cada muestra
         \item Mientras más peso tiene una muestra, más masa de probabilidad hay en esa región
-        \item Los pesos de todas las partículas juntas deben sumar 1.
+        \item Los pesos de todas las partículas juntas deben sumar 1
         \item Al inicio, podríamos agregarle a cada muestra un peso uniforme. Por ejemplo, si tenemos $n$ muestras, entonces cada muestra tiene peso $\frac{1}{n}$
     \end{itemize}
     
