Slides 06: minor changes

--- a/teoricas/teorica_06/src/ekf.tex
+++ b/teoricas/teorica_06/src/ekf.tex
@@ -250,7 +250,7 @@
 
 
 \begin{frame}
-    \frametitle{Jacobiano en acción: Transformación Lineal}
+    \frametitle{Transformación Lineal}
 
     \begin{center}
         \movie[autostart,loop,poster]{\includegraphics[width=0.6\columnwidth]{images/matrix_as_linear_transformation_video.jpg}}{videos/matrix_as_linear_transformation.mp4}
@@ -262,7 +262,7 @@
 
 
 \begin{frame}
-    \frametitle{Jacobiano en acción: Transformación No-Lineal}
+    \frametitle{Transformación No-Lineal}
 
     \begin{center}
         \movie[autostart,loop,poster]{\includegraphics[width=0.5\columnwidth]{images/jacobian_nonlinear_transform_video.jpg}}{videos/jacobian_nonlinear_transform.mp4}
@@ -273,7 +273,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Jacobiano en acción: Localmente Lineal}
+    \frametitle{Transformación No-Lineal (pero Localmente Lineal)}
 
     \begin{center}
         \movie[autostart,loop,poster]{\includegraphics[width=\columnwidth]{images/jacobian_locally_linear_video.jpg}}{videos/jacobian_locally_linear.mp4}
