Slides 06: Add jacobian tangent plane image

--- a/teoricas/teorica_06/src/ekf.tex
+++ b/teoricas/teorica_06/src/ekf.tex
@@ -142,7 +142,6 @@
         %    \end{align*}
     
     \begin{figure}[!h]
-        
         \includegraphics[width=0.4\columnwidth]{./images/kalman_filter_linear_equations_cross_out.pdf}
     \end{figure}
     
@@ -236,13 +235,26 @@
 
 \begin{frame}
     \frametitle{Recordando Jacobianos}
-    
-    \TODO{agregar imagenes de jacobianos 3D, plano tangencial}
-    
+   
     \begin{itemize}
-        \item El Jacobiano es la orientación del plano tangente a la función vectorial en un punto dado
+        \item El Jacobiano es la orientación del plano tangente a una función vectorial en un punto dado
         \item El Jacobiano es la generalización del gradiente de una función escalar
     \end{itemize}
+
+    \begin{figure}[!h]
+        \centering
+        \subfloat[]
+        {
+            \includegraphics[valign=m,width=0.3\columnwidth]{./images/jacobian_tangent_plane.pdf}
+        }
+        \hspace{1cm} \subfloat[]
+        {
+            \includegraphics[valign=m,width=0.4\columnwidth]{./images/jacobian_local_linear_transform.pdf}
+        }
+    \end{figure}
+
+    \begin{center}
+    \end{center}
 
     \note{Info: https://angeloyeo.github.io/2020/07/24/Jacobian_en.html}
 
