Slides 07: minor change

--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -570,7 +570,7 @@ tenemos entonces:
 	\frametitle{Forward measurement model vs inverse measurement model}
 	\note{información extraída de https://youtu.be/v-Rm9TUG9LA}
     
-    \TODO{explicar mejor invese sensor model y formard sensor model}
+    \TODO{explicar mejor invese sensor model y forward sensor model}
    
 	El algoritmo \emph{occupancy grid mapping} requiere un modelo marginalized inverse measurement model, $p(\map_{i}|\state, \observation )$. Esta probabilidad se llama inversa ya que razona de efectos a causas: proporciona información sobre el mundo condicionada a una medida provocada por este mundo.
 
