--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -603,11 +603,13 @@ tenemos entonces:
 \end{frame}
 
 \begin{frame}
-    \frametitle{Bresenham's line algorithm}
+    \frametitle{Qué celdas actualizar por cada rayo de LiDAR}
     \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
-    
-    
-    \TODO{agregar imagen de Bresenham's line algorithm como hace cyrill stachniss}
+    Bresenham's line algorithm
+    \begin{figure}[!h]
+        \includegraphics[width=0.8\columnwidth]{./images/bresenham.pdf}
+    \end{figure}
+
 \end{frame}
 
 \begin{frame}
