Slides 08: minor change

--- a/teoricas/teorica_08/src/least_squares.tex
+++ b/teoricas/teorica_08/src/least_squares.tex
@@ -499,7 +499,7 @@
         \item Linealizar las funciones de error individuales
         \item Esto lleva a una forma cuadrática
         \item Se obtiene un sistema lineal derivando e igualando a 0
-        \item Resolver el sistema lineale conduce a una actualización del estado
+        \item Resolver el sistema lineal conduce a una actualización del estado
         \item Iterar
     \end{itemize}
     
