Slides 09: Add discretized_configuration_space image

--- a/teoricas/teorica_09/src/motion_planning.tex
+++ b/teoricas/teorica_09/src/motion_planning.tex
@@ -198,6 +198,18 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{Discretización del $\configurationSpace$-Space}
+    \note{Información extraída de Cyrill Stachniss - Robot Motion Planning using A*: https://youtu.be/HR1TNa8Lp7w}
+    
+	\begin{figure}[!h]
+		\includegraphics[width=0.5\textwidth]{images/discretized_configuration_space.pdf}
+	\end{figure}
+    
+\end{frame}
+
+
+
+\begin{frame}
     \frametitle{Búsqueda}
     \note{Información extraída de Cyrill Stachniss - Robot Motion Planning using A*: https://youtu.be/HR1TNa8Lp7w}
 
@@ -207,7 +219,7 @@
         \begin{itemize}
             \item \textbf{Búsqueda desinformada:} además de la definición del problema, no hay más información sobre el dominio (\emph{blind search})
             \item Ampliar diferentes nodos con la esperanza de alcanzar el \emph{goal} en algún momento
-            \item Ejemplos: breath-first, uniform-cost, depth-first, bidirectional, etc.
+            \item Ejemplos: breadth-first, uniform-cost, depth-first, bidirectional, etc.
         \end{itemize}
     }
 
@@ -332,15 +344,6 @@
     \end{itemize}
     
 \end{frame}
-
-\begin{frame}
-    \frametitle{Ejemplo de A$^{*}$}
-    \note{Información extraída de Cyrill Stachniss - Robot Motion Planning using A*: https://youtu.be/HR1TNa8Lp7w}
-    
-    
-    
-\end{frame}
-
 
 \begin{frame}
     \frametitle{Ejemplo: A$^{*}$}
