Slides 10: Remove repeated slides

--- a/teoricas/teorica_09/src/motion_planning.tex
+++ b/teoricas/teorica_09/src/motion_planning.tex
@@ -506,7 +506,7 @@
 
 
 \begin{frame}
-    \frametitle{Ejemplo: First Search vs A$^{*}$}
+    \frametitle{Ejemplo: Breadth-First Search vs A$^{*}$}
     \begin{footnotesize}
         \begin{columns}[t]
             \begin{column}{5cm}
