--- a/teoricas/teorica_10/src/position_control.tex
+++ b/teoricas/teorica_10/src/position_control.tex
@@ -1,16 +1,16 @@
+\subsection{Position Control}
+
 \begin{frame}
-    \frametitle{Motivación: Position control}
+    \frametitle{Motivación: Position Control}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
     \begin{itemize}
-        \item Mover al robot a una ubicación deseada $\state_{des}$
-        \item ¿Cómo generar una señal apropiada de control $\controlCommand$?
-        \item La localización del robot estimada por medio de un sensor con mediciones $\observation$
+        \item Mover el robot a una ubicación deseada $x_{des}$
+        \item ¿Cómo generamos una señal de control adecuada $\controlCommand$?
+        \item La localización del robot se estima mediante mediciones $\measurement$ de un sensor
     \end{itemize}
     
 \end{frame}
-
-
 \begin{frame}
     \frametitle{Cinemática de un cuerpo rígido}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
