Slides 10: fix typos

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -183,7 +183,7 @@
     \begin{itemize}
         \item PID-Control:
         \begin{equation*}
-            \controlCommand_{t} = K_{p} \int_{0}^{t} \error_{t} \, dt
+            \controlCommand_{t} = K_{i} \int_{0}^{t} \error_{t} \, dt
         \end{equation*}
     \end{itemize}
     
