Slides 10: clean references

--- a/common/bibliography.bib
+++ b/common/bibliography.bib
@@ -287,18 +287,6 @@
     doi={10.1561/2300000043}
 }
 
-
-% Principles of Robot Motion: Theory, Algorithms, and Implementations
-@BOOK{choset2005principles,
-	author={Choset, Howie and Lynch, Kevin M. and Hutchinson, Seth and Kantor, George A. and Burgard, Wolfram and Kavraki, Lydia E. and Thrun, Sebastian},
-	title={\href{https://ieeexplore.ieee.org/servlet/opac?bknumber=6267238}{Principles of Robot Motion: Theory, Algorithms, and Implementations}}, 
-	year={2005},
-	volume={},
-	number={},
-	pages={1--625},
-	ISBN={9780262255912}
-}
-
 % [Motion Planning] Robot Motion Planning
 @book{latombe1991robot,
     author = {Latombe, Jean-Claude},
@@ -315,11 +303,11 @@
 @INPROCEEDINGS{simmons1996curvature,
     author={Simmons, R.},
     booktitle={Proceedings of IEEE International Conference on Robotics and Automation}, 
-    title={The curvature-velocity method for local obstacle avoidance}, 
+    title={{The curvature-velocity method for local obstacle avoidance}}, 
     year={1996},
     volume={4},
     number={},
-    pages={3375-3382},
+    pages={3375--3382},
     doi={10.1109/ROBOT.1996.511023}
 }
 
@@ -327,7 +315,7 @@
 @ARTICLE{fox1997dwa,
     author={Fox, D. and Burgard, W. and Thrun, S.},
     journal={IEEE Robotics & Automation Magazine}, 
-    title={The dynamic window approach to collision avoidance}, 
+    title={{The dynamic window approach to collision avoidance}}, 
     year={1997},
     volume={4},
     number={1},
@@ -339,7 +327,7 @@
 @INPROCEEDINGS{brock1999dwa,
     author={Brock, O. and Khatib, O.},
     booktitle={Proceedings 1999 IEEE International Conference on Robotics and Automation (Cat. No.99CH36288C)}, 
-    title={High-speed navigation using the global dynamic window approach}, 
+    title={{High-speed navigation using the global dynamic window approach}}, 
     year={1999},
     volume={1},
     number={},
@@ -351,7 +339,7 @@
 @INPROCEEDINGS{konolige2000gradient,
     author={Konolige, K.},
     booktitle={Proceedings. 2000 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2000) (Cat. No.00CH37113)}, 
-    title={A gradient method for realtime robot control}, 
+    title={{A gradient method for realtime robot control}}, 
     year={2000},
     volume={1},
     number={},
@@ -363,7 +351,7 @@
 @INPROCEEDINGS{minguez2001global,
     author={Minguez, J. and Montano, L. and Simeon, T. and Alami, R.},
     booktitle={Proceedings 2001 ICRA. IEEE International Conference on Robotics and Automation (Cat. No.01CH37164)}, 
-    title={Global nearness diagram navigation (GND)}, 
+    title={{Global nearness diagram navigation (GND)}}, 
     year={2001},
     volume={1},
     number={},
@@ -375,11 +363,11 @@
 @ARTICLE{minguez2004nearness,
     author={Javier Minguez and Montano, L.},
     journal={IEEE Transactions on Robotics and Automation}, 
-    title={Nearness diagram (ND) navigation: collision avoidance in troublesome scenarios}, 
+    title={{Nearness diagram (ND) navigation: collision avoidance in troublesome scenarios}}, 
     year={2004},
     volume={20},
     number={1},
-    pages={45-59},
+    pages={45--59},
     doi={10.1109/TRA.2003.820849}
 }
 
@@ -387,7 +375,7 @@
 @INPROCEEDINGS{ulrich1998vfhplus,
     author={Ulrich, I. and Borenstein, J.},
     booktitle={Proceedings. 1998 IEEE International Conference on Robotics and Automation (Cat. No.98CH36146)}, 
-    title={VFH+: reliable obstacle avoidance for fast mobile robots}, 
+    title={{VFH+: reliable obstacle avoidance for fast mobile robots}}, 
     year={1998},
     volume={2},
     number={},
@@ -397,7 +385,7 @@
 
 [GNSS] Global Positioning System: Signals, Measurements, and Performance
 @book{misra2006global,
-  title={Global Positioning System: Signals, Measurements, and Performance},
+  title={{Global Positioning System: Signals, Measurements, and Performance}},
   author={Misra, P. and Enge, P.},
   isbn={9780970954411},
   url={https://books.google.com.ar/books?id=pv5MAQAAIAAJ},
@@ -405,3 +393,10 @@
   publisher={Ganga-Jamuna Press}
 }
 
+@book{lynch2017modern,
+  place={Cambridge},
+  title={{Modern Robotics: Mechanics, Planning, and Control}},
+  publisher={Cambridge University Press},
+  author={Lynch, Kevin M. and Park, Frank C.},
+  year={2017}
+}
