--- a/teoricas/teorica_09/src/bibliography.tex
+++ b/teoricas/teorica_09/src/bibliography.tex
@@ -17,7 +17,10 @@
 	\nocite{choset2005principles}
 	
 	\nocite{siegwart2011introduction}
-	
+
+	\nocite{latombe1991robot}
+
+	\nocite{lynch2017modern}
 	
 	\printbibliography
 	
