--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -156,7 +156,7 @@
 \begin{frame}
     \frametitle{Proportional+Derivative control}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
-    
+    \footnotesize
     \begin{itemize}
         \item PD-Control:
         \begin{equation*}
@@ -165,7 +165,7 @@
     \end{itemize}
     
     \begin{center}
-        \includegraphics[width=0.7\columnwidth]{images/pid_control_derivative_temperature.pdf}
+        \includegraphics[width=0.65\columnwidth]{images/pid_control_derivative_temperature.pdf}
     \end{center}
     
     Un \emph{damping} (amortiguación) demasiado pequeño produce \emph{overshoot} y \emph{ringing}, demasiado grande provoca una respuesta innecesariamente lenta.
