--- a/tps/final/final.tex
+++ b/tps/final/final.tex
@@ -22,18 +22,19 @@
 	
 	
 	\section{Temas}
-    El tema a realizar debe ser acordado con la cátedra y no debe ser el mismo que el de otro grupo. Los temas posibles son:    
+    El tema a realizar debe ser acordado con la cátedra y no debe ser el mismo que el de otro grupo.
+	
+	Ejemplos de temas posibles son:    
 	\begin{itemize}
-		
-		\item Implementación de \emph{Iterative Closest Point} (ICP) utilizando sensor LiDAR o RGB-D
-		\item Implementación de EKF-SLAM utilizando landmarks (LiDAR: Postes o líneas, Visual: fiducial markers) y odometría de ruedas
-		\item Implementación de Particle Filter SLAM utilizando utilizando landmarks (LiDAR: postes o líneas, Visual: fiducial markers) y odometría de ruedas
-		\item Implementación de un sistema Visual-Odometry
-		\item Trabajo propuesta por el grupo, a confirmar por la cátedra
+		\item Análisis de paper y reproducción
+		%\item Implementación de \emph{Iterative Closest Point} (ICP) utilizando sensor LiDAR o RGB-D
+		%\item Implementación de EKF-SLAM utilizando landmarks (LiDAR: Postes o líneas, Visual: fiducial markers) y odometría de ruedas
+		%\item Implementación de Particle Filter SLAM utilizando utilizando landmarks (LiDAR: postes o líneas, Visual: fiducial markers) y odometría de ruedas
+		%\item Implementación de un sistema Visual-Odometry
+		%\item Trabajo propuesta por el grupo, a confirmar por la cátedra
 		%\item Implementación de un sistema de un Mapeo
 		%\item Evaluación de un sistema de SLAM, o path planning con reporte explicando y analizando los resultados.
 		%\item Implementación de un sistema de planeamiento de trayectorias.
-	
 	\end{itemize}
 		
 	\section{Entrega}
