--- a/tps/final/final.tex
+++ b/tps/final/final.tex
@@ -22,11 +22,12 @@
 	
 	
 	\section{Temas}
-    El tema a realizar debe ser acordado con la cátedra y no debe ser el mismo que el de otro grupo.
+    El tema a realizar debe ser acordado con la cátedra y no debe ser el mismo que el de otro grupo. 
 	
 	Ejemplos de temas posibles son:    
 	\begin{itemize}
-		\item Análisis de paper y reproducción
+		\item Análisis de paper con código libre.
+		\item Implementación de algún método o algoritmo del estado del arte.
 		%\item Implementación de \emph{Iterative Closest Point} (ICP) utilizando sensor LiDAR o RGB-D
 		%\item Implementación de EKF-SLAM utilizando landmarks (LiDAR: Postes o líneas, Visual: fiducial markers) y odometría de ruedas
 		%\item Implementación de Particle Filter SLAM utilizando utilizando landmarks (LiDAR: postes o líneas, Visual: fiducial markers) y odometría de ruedas
@@ -40,36 +41,34 @@
 	\section{Entrega}
 	\begin{itemize}
 		
-		\item Realizar el código en los lenguajes de programación Python o C++. El código debe ser legible y estar comentado adecuadamente. Se recomienda utilizar Doxygen\footnote{\url{https://doxygen.nl/}} para la documentación del código.
+		\item En el caso de desarrollar código, este debe en los lenguajes de programación Python o C++. El código debe ser legible y estar comentado adecuadamente. Se recomienda utilizar Doxygen\footnote{\url{https://doxygen.nl/}} para la documentación del código.
 		
-		\item Proveer un repositorio Git que contenga el código desarrollado, una imagen Docker y un archivo \lstinline{README.md} con las instrucciones de compilación y ejecución.
+		\item En el caso de desarrollar código, se debe proveer un repositorio Git que contenga el código desarrollado, una imagen Docker y un archivo \lstinline{README.md} con las instrucciones de compilación y ejecución.
 		
 		\item Entregar un informe en Lyx o \LaTeX\  explicando el trabajo realizado y analizando los resultados obtenidos.
-		
-		\item Realizar la presentación del trabajo con slides en día y horario a acordar.
+
+		\item Realizar la presentación del trabajo con slides en día y horario a acordar. Para la visualización de slides realizadas en \LaTeX\ se recomienda el uso de la herramienta \lstinline{pdfpc}\footnote{\url{https://github.com/pdfpc/pdfpc}}.
         
-        \item Realizar un vídeo dónde se muestre el funcionamiento del sistema.         
+        \item Realizar al menos un vídeo dónde se muestre el funcionamiento del sistema.         
 	\end{itemize}
 
 	
-	\section{Experimentación con dataset y robot}
+	\section{(Opcional) Experimentación con dataset y robot}
 	\begin{itemize}
         
-        \item (Opcional) Comenzar a trabajar con datos simulados en gazebo o algún dataset del estado del arte.
+        \item Primero, realizar experimentos en simulación o sobre algún dataset del estado del arte.
         
-		\item Grabar un dataset con los sensores seleccionados utilizando el robot Create 3 provisto por la cátedra. Estos datos serán los utilizados para el desarrollo del sistema. El dataset debera contar con ground-truth de localización, es decir, contar con la localización real del robot. El ground-truth será utilizado para comparar la localización estimada por el sistema de localización desarrollado. Para el ground-truth se puede utilizar el paquete \lstinline{ros2_aruco}\footnote{\url{https://github.com/JMU-ROBOTICS-VIVA/ros2_aruco}}. 
+		\item Luego, utilizar un dataset del robot Create 3 o grabar un dataset propio con los sensores necesarios utilizando el robot Create 3 provisto por la cátedra. Estos datos serán los utilizados para el desarrollo del sistema. El dataset debera contar con ground-truth de localización, es decir, contar con la localización real del robot. El ground-truth será utilizado para comparar la localización estimada por el sistema de localización desarrollado. Para el ground-truth se puede utilizar el paquete \lstinline{ros2_aruco}\footnote{\url{https://github.com/JMU-ROBOTICS-VIVA/ros2_aruco}}. 
 		
 		\item Realizar experimentos con el robot Create 3 provisto por la cátedra.
-		
-		\item No es necesario que el sistema funcione en tiempo real.
 	\end{itemize}
 	
 	
 	\section{Análisis de Resultados}
 		\begin{itemize}
-			\item Calcular el error obtenido con las métricas estándares utilizadas en robótica. Para evaluar un sistema de localización se recomienda utilizar la herramienta \lstinline{evo}\footnote{\url{https://github.com/MichaelGrupp/evo}} o \lstinline{rpg_trajectory_evaluation}\footnote{\url{https://github.com/uzh-rpg/rpg_trajectory_evaluation}}. La misma permite calcular los errores \emph{Absolut Trajectory Error} (ATE) y \emph{Relative Pose Error} (RPE).
+			\item Calcular el error obtenido con las métricas estándares utilizadas en robótica. Para evaluar un sistema de localización se recomienda utilizar la herramienta \lstinline{evo}\footnote{\url{https://github.com/MichaelGrupp/evo}} o \lstinline{rpg_trajectory_evaluation}\footnote{\url{https://github.com/uzh-rpg/rpg_trajectory_evaluation}}. La misma permite calcular los errores \emph{Absolute Trajectory Error} (ATE) y \emph{Relative Pose Error} (RPE).
 		
-			\item Comentar los casos donde el sistema no funciona adecuadamente, y las posibles mejoras que se podrían realizar.
+			\item Comentar los casos donde el sistema no funciona adecuadamente o las limitaciones, y las posibles mejoras que se podrían realizar.
 		\end{itemize}
 
 	\printbibliography
